<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".JourneyDetails">

<!-- Text view for Title-->
    <TextView
        android:id="@+id/page_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:text="@string/journey_details"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Text View for Source Location-->
    <TextView
        android:id="@+id/source_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/page_Id"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/source_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_location_display"
        android:textSize="20sp"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/page_Id"
        app:layout_constraintStart_toEndOf="@id/source_id"
        />

    <!-- Text view for Destination-->
    <TextView
        android:id="@+id/destination_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/source_id"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/destination_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_destination"
        android:textSize="20sp"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/source_tv"
        app:layout_constraintStart_toEndOf="@id/destination_id"
        />

    <!-- Text view for Travelling Date -->
    <TextView
        android:id="@+id/travellingDate_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelling_date"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/destination_id"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/travellingDate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelling_date_display"
        android:textSize="20sp"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/destination_tv"
        app:layout_constraintStart_toEndOf="@id/travellingDate_id"
        />

    <!-- Text View for Travelling Time-->
    <TextView
        android:id="@+id/travellingTime_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelling_time"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/travellingDate_id"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/travellingTime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelling_time_display"
        android:textSize="20sp"
        android:layout_marginTop="16sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/travellingDate_id"
        app:layout_constraintStart_toEndOf="@id/travellingDate_id"
        />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/travellingTime_tv"
        app:layout_constraintEnd_toEndOf="parent"
/>


</androidx.constraintlayout.widget.ConstraintLayout>