<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/sourceLocation_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="8sp"
        android:drawableStart="@drawable/ic_action_source_location"
        android:drawablePadding="8sp"
        tools:text=""
        android:hint="@string/enter_source_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/destinationLocation_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:drawablePadding="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:drawableStart="@drawable/ic_action_destination_location"
        tools:ignore="@string/enter_destination_location"
        android:hint="@string/enter_destination_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sourceLocation_et" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon = "@drawable/ic_action_date"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/timeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destinationLocation_et" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon = "@drawable/ic_action_time"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dateButton"
        app:layout_constraintTop_toTopOf="@+id/dateButton" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textStyle="bold"
        android:layout_marginTop="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.5"
        app:layout_constraintTop_toBottomOf="@id/timeButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>